Updates mapping component - Creates new 'WithMapBar' story - Adds new 'mapBar' prop - Sets 'mapBar' to false on stories which do not require it - Removes children from the MapBar tag as they are no longer needed here - Set's 'overflow-x' to hidden on the map-container (stops the MapBar from leaving the frame but remaining partially visable in the viewport)

--- a/packages/components/src/local/mapping/styles.module.scss
+++ b/packages/components/src/local/mapping/styles.module.scss
@@ -1,5 +1,6 @@
 .map-container {
   position: relative;
+  overflow-x: hidden;
 }
 
 .map {
